--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span></span>
                     </div>
                     <!-- 头像照片 -->
-                    <img class="avatar" src="assets/images/92fb0b2f48b460e0a97cf18b4996599.jpg" onload="load()">
+                    <img class="avatar" src="assets/images/a.jpg" onload="load()">
                 </section>
 
                 <h1 class="name">小白</h1>
