--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <hr/>
                 <img src="assets/images/e1034e9399a452dec8cc478424036a8.jpg" style="width: 100%;" alt="">
 				<img src="assets/images/b.jpg" style="width: 100%;" alt="">
-				<img src="assets/images/c.JPG" style="width: 100%;" alt="">
+				<img src="assets/images/c.jpg" style="width: 100%;" alt="">
 				
             </section>
 
