--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
                 <h2>
                     <i class="fa fa-pencil" aria-hidden="true"></i>男朋友的告白</h2>
                 <hr/>
-                <p>[我想把世界上最好的都给你，却发现世界上最好的就是你。]
+                <p>[我喜欢我属于你的东西]
+                    <span class="mark-txt"></span></p>
+		     <hr/>
+                <p>[青青子衿，悠悠我心。纵我不往，子宁不嗣音]
                     <span class="mark-txt"></span></p>
             </section>
         </section>
